# Labs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Lab 1/src/: 02_sum_avg.py  04_minutes_to_hhmm.py  06_*.py
Lab_1/src/: 05_initials_and_len.py  07_*.py
lab01/: README.md
lab01/src/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06_*.py  07_*.py
lab02/: README.md
lab02/src/: arrays.py  matrix.py  tuples.py
lab02/tests/: test_arrays.py
lab03/: README.md
lab03/src/: text.py  text_stats.py
lab04/: README.md
lab04/data/: check.csv
lab04/src/: io_txt_csv.py  text_report.py
lab05/: README.md
lab05/data/samples/: people.json
lab05/src/: json_csv.py
lab06/data/samples/: input.txt
lab06/src/: cli_convert.py  cli_text.py
lib/: __init__.py  matrix.py  text.py  tuples.py  utils.py
src/lab01/: README.md
src/lab01/src/: 01_greeting.py  02_sum_avg.py  06_*.py
src/lab02/: README.md
src/lab02/src/: tuples.py
src/lab03/: README.md
src/lab03/src/: text.py  text_stats.py
src/lab04/: README.md
src/lab04/src/: io_txt_csv.py  text_report.py
src/lab05/src/: cvs_xlsx.py  json_csv.py
src/lab06/: README.md
src/lab06/src/: cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab07/tests/: test_json_csv.py  test_text.py
src/lab08/: README.md
src/lab08/data/: students.json
src/lab08/src/: main.py  serialize.py
src/lab09/: README.md
src/lab09/src/: models.py
src/lab09/tests/: test_models.py
src/lab10/: README.md
src/lib/: arrays.py  tuples.py  utils.py
(+5 files in other folders)
